--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pro-settings-http-request",
-	"version": "1.0.3-0",
+	"version": "1.0.3",
 	"description": "'by AshenOneOrz'",
 	"main": "request.js",
 	"scripts": {
